added email and phone to contact section

--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
               <p>Join me!</p>
               <span><a href="https://github.com/rjleask" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></span>
               <span><a href="https://www.linkedin.com/in/jamleask/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></a></i></span>
+              <p class="contact-phone-email">Email: rjamie.leask@gmail.com</p>
+              <p class="contact-phone-email">Phone: 603-547-0776</p>
             </div>
           </div>
         </div>
@@ -121,8 +123,8 @@
       <div class="modal-body">
         <p class="header-p modal-title">Next Flick</p>
         <p class="modal-description">Spend to much time deciding what movies to watch? Next flick will reduce that time greatly. Make an account, and customize your settings to view more accurate results.</p>
-        <p><a class="modal-github" href="https://github.com/rjleask/next-flick">View Github Page</a></p>
-        <p><a class="modal-app" href="https://secure-dawn-11382.herokuapp.com/">View App</a></p>
+        <p><a class="modal-github" href="https://github.com/rjleask/next-flick" target="_blank">View Github Page</a></p>
+        <p><a class="modal-app" href="https://secure-dawn-11382.herokuapp.com/" target="_blank">View App</a></p>
         <button type="button" class="btn btn-default" id="close-modal" data-dismiss="modal">Close</button>
       </div>
     </section>
@@ -132,8 +134,8 @@
       <div class="modal-body">
         <p class="header-p modal-title">Firewall Penitentiary</p>
         <p class="modal-description">Futuristic themed game that combinds football and tron</p>
-        <p><a class="modal-github" href="https://github.com/rjleask/firewall-penitentiary-sp">View Github Page</a></p>
-        <p><a class="modal-app" href="https://rjleask.github.io/firewall-penitentiary-sp/">View App</a></p>
+        <p><a class="modal-github" href="https://github.com/rjleask/firewall-penitentiary-sp" target="_blank">View Github Page</a></p>
+        <p><a class="modal-app" href="https://rjleask.github.io/firewall-penitentiary-sp/" target="_blank">View App</a></p>
         <button type="button" class="btn btn-default" id="close-modal" data-dismiss="modal">Close</button>
       </div>
     </section>
@@ -142,8 +144,8 @@
       <div class="modal-body">
         <p class="header-p modal-title">Sports Legends Trivia</p>
         <p class="modal-description">Ever been to a party/gathering and everyone looks at you funny because you don't know who babe ruth is? Better view this to avoid awkward silences.</p>
-        <p><a class="modal-github" href="https://github.com/rjleask/TriviaGame">View Github Page</a></p>
-        <p><a class="modal-app" href="https://rjleask.github.io/TriviaGame/trivia.html">View App</a></p>
+        <p><a class="modal-github" href="https://github.com/rjleask/TriviaGame" target="_blank">View Github Page</a></p>
+        <p><a class="modal-app" href="https://rjleask.github.io/TriviaGame/trivia.html" target="_blank">View App</a></p>
         <button type="button" class="btn btn-default" id="close-modal" data-dismiss="modal">Close</button>
       </div>
     </section>
@@ -158,7 +160,7 @@
     var workOutterDiv = $('.work-outter-div');
     var contactOuterDiv = $('.contact-outter-div');
 
-  
+        // scroll vertical function
         $(document).scroll(function() {
           aboutOutterDiv.css({ position: $(this).scrollTop() > 662 ? "fixed" : "absolute" });
           workOutterDiv.css({ position: $(this).scrollTop() > 1324 ? "fixed" : "absolute" });
