--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <div class="about-left-content left-content">
             <h1>About</h1>
             <nav class="top-footer">
-              <ul class="nav">
+              <ul class="nav justify-content-center">
                 <li class="nav-item about-item"><a href="#about">About</a></li>
                 <li class="nav-item about-item">|</li>
                 <li class="nav-item about-item"><a href="#work">Work</a></li>
@@ -66,7 +66,7 @@
           <div class="work-left-content left-content">
             <h1>Work</h1>
             <nav class="top-footer">
-              <ul class="nav">
+              <ul class="nav justify-content-center">
                 <li class="nav-item"><a href="#about">About</a></li>
                 <li class="nav-item">|</li>
                 <li class="nav-item"><a href="#work">Work</a></li>
@@ -96,7 +96,7 @@
           <div class="contact-left-content">
             <h1>Contact</h1>
             <nav class="top-footer">
-              <ul class="nav">
+              <ul class="nav justify-content-center">
                 <li class="nav-item"><a href="#about">About</a></li>
                 <li class="nav-item">|</li>
                 <li class="nav-item"><a href="#work">Work</a></li>
