fixed some typos in the about section

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
         </div>
         <div class="paragraph intro-2">
           <p class="intro-p header-p">Direction</p>
-          <p class="intro-p">Recently i joined a full stack coding bootcamp. A vigorous program that both fulfills my hunger to learn and challenges me everyday. The combination of a visually stimulating and usable UI mixed with a powerful and elegant backend is a symphony to behold and one i plan to for as long as i can...</p>
+          <p class="intro-p">Recently I joined a full stack coding bootcamp. A vigorous program that both fulfills my hunger to learn and challenges me everyday. The combination of a visually stimulating and usable UI mixed with a powerful and elegant backend is a symphony to behold and one I plan to for as long as I can...</p>
         </div>
         <div class="paragraph goals-1">
           <p class="intro-p header-p">Goals</p>
-          <p class="intro-p">I am of the mind set to both learn: from the many incredibly gifted and intelligent people that litter this community and to teach: pass along and give others any information that i can to help them progress, and thus help progress our fields ecosystem</p>
+          <p class="intro-p">I am of the mind set to both learn: from the many incredibly gifted and intelligent people that litter this community and to teach: pass along and give others any information that I can to help them progress, and thus help progress our fields ecosystem</p>
         </div>
       </div>
     </section>
