fixed a typo in the about section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </section>
     <section class="fullpage-section about-section">
       <div class="about-outter-div tops">
-        <a name="about"></a>
+        <a id="about"></a>
         <div class="about-left-wrapper left-wrappers">
           <div class="about-left-content left-content">
             <h1>About</h1>
@@ -122,7 +122,7 @@
     <section id="modal-next" class="modal modal-style">
       <div class="modal-body">
         <p class="header-p modal-title">Next Flick</p>
-        <p class="modal-description">Spend to much time deciding what movies to watch? Next flick will reduce that time greatly. Make an account, and customize your settings to view more accurate results.</p>
+        <p class="modal-description">Spend too much time deciding what movies to watch? Next flick will reduce that time greatly. Make an account, and customize your settings to view more accurate results.</p>
         <p><a class="modal-github" href="https://github.com/rjleask/next-flick" target="_blank">View Github Page</a></p>
         <p><a class="modal-app" href="https://secure-dawn-11382.herokuapp.com/" target="_blank">View App</a></p>
         <button type="button" class="btn btn-default" id="close-modal" data-dismiss="modal">Close</button>
