--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </section>
     <section class="fullpage-section about-section">
       <div class="about-outter-div tops">
-        <a id="about"></a>
+        <p id="about"></p>
         <div class="about-left-wrapper left-wrappers">
           <div class="about-left-content left-content">
             <h1>About</h1>
@@ -61,7 +61,7 @@
     </section>
     <section class="fullpage-section work-section">
       <div class="work-outter-div tops">
-        <a name="work"></a>
+        <a id="work"></a>
         <div class="work-left-wrapper left-wrappers">
           <div class="work-left-content left-content">
             <h1>Work</h1>
@@ -81,6 +81,9 @@
         <div class="apps apps-next" id="next">
           <p class="header-p app-title"><a class="app-link">Next Flick App</a><i class="fa fa-film"></i></p>
         </div>
+        <div class="apps-guess apps" id="guess">
+          <p class="header-p app-title"><a class="app-link">Pokemon Guess Who</a><i class="fa fa-gamepad" aria-hidden="true"></i></p>
+        </div>
         <div class="apps-fire apps" id="firewall">
           <p class="header-p app-title"><a class="app-link">Firewall Penitentiary</a><i class="fa fa-gamepad" aria-hidden="true"></i></p>
         </div>
@@ -91,7 +94,7 @@
     </section>
     <section class="fullpage-section contact-section">
       <div class="contact-outter-div tops">
-        <a name="contact"></a>
+        <a id="contact"></a>
         <div class="contact-left-wrapper left-wrappers">
           <div class="contact-left-content">
             <h1>Contact</h1>
@@ -125,6 +128,17 @@
         <p class="modal-description">Spend too much time deciding what movies to watch? Next flick will reduce that time greatly. Make an account, and customize your settings to view more accurate results.</p>
         <p><a class="modal-github" href="https://github.com/rjleask/next-flick" target="_blank">View Github Page</a></p>
         <p><a class="modal-app" href="https://secure-dawn-11382.herokuapp.com/" target="_blank">View App</a></p>
+        <button type="button" class="btn btn-default" id="close-modal" data-dismiss="modal">Close</button>
+      </div>
+    </section>
+    <!-- end of modal -->
+     <!-- Modal -->
+     <section id="modal-guess" class="modal modal-style">
+      <div class="modal-body">
+        <p class="header-p modal-title">Pokemon Guess-Who</p>
+        <p class="modal-description">MERN stack app, guess who essentials with a pokemon twist!</p>
+        <p><a class="modal-github" href="https://github.com/rjleask/pokemon-guess-who" target="_blank">View Github Page</a></p>
+        <p><a class="modal-app" href="https://calm-hamlet-36261.herokuapp.com/" target="_blank">View App</a></p>
         <button type="button" class="btn btn-default" id="close-modal" data-dismiss="modal">Close</button>
       </div>
     </section>
@@ -164,7 +178,7 @@
     $(document).scroll(function() {
       aboutOutterDiv.css({ position: $(this).scrollTop() > 662 ? "fixed" : "absolute" });
       workOutterDiv.css({ position: $(this).scrollTop() > 1324 ? "fixed" : "absolute" });
-      contactOuterDiv.css({ position: $(this).scrollTop() > 2765 ? "fixed" : "absolute" });
+      contactOuterDiv.css({ position: $(this).scrollTop() > 3280 ? "fixed" : "absolute" });
     });
 
     var imageUrl;
@@ -189,6 +203,9 @@
 
     function getBackgroundImageUrl(id) {
       switch (id) {
+        case "guess":
+        return "assets/images/guessWho.png"
+        break;
         case "next":
           return "assets/images/nextflick.png"
           break;
