fixed poke image

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     </section>
     <section class="fullpage-section about-section">
       <div class="about-outter-div tops">
-        <p id="about"></p>
         <div class="about-left-wrapper left-wrappers">
           <div class="about-left-content left-content">
+            <p id="about"></p>
             <h1>About</h1>
             <nav class="top-footer">
               <ul class="nav justify-content-center">
@@ -204,7 +204,7 @@
     function getBackgroundImageUrl(id) {
       switch (id) {
         case "guess":
-        return "assets/images/guessWho.png"
+        return "assets/images/guessWho.PNG"
         break;
         case "next":
           return "assets/images/nextflick.png"
