--- a/index.html
+++ b/index.html
@@ -182,13 +182,15 @@
     });
 
     var imageUrl;
+    
     // modal
     $(".app-link").on("click", function() {
       var modalId = $(this).parent().parent().attr('id');
       $("#modal-" + modalId).modal({ show: true });
     })
-
+    console.log(winWidth());
     // toggle fade background image and paragraph text on mouse enter and leave
+    if (winWidth() > 700){
     $(".apps").on({
       mouseenter: function() {
         imageUrl = getBackgroundImageUrl($(this).attr("id"));
@@ -200,7 +202,17 @@
         $(this).css("background-image", "linear-gradient(to bottom, rgba(230, 230, 230, 0), rgba(230, 230, 230, 0)),url(" + imageUrl + ")");
       }
     });
-
+    }else{
+      $(".apps").on("click", function(){
+        imageUrl = getBackgroundImageUrl($(this).attr("id"));
+        $(this).children("p").css('opacity', '1');
+        $(this).css("background-image", "linear-gradient(to bottom, rgba(230, 230, 230, 1), rgba(230, 230, 230, 1)),url(" + imageUrl + ")");
+      })
+    }
+    
+    function winWidth() {
+     return  $(window).width();
+    }
     function getBackgroundImageUrl(id) {
       switch (id) {
         case "guess":
